@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2014 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2015 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -27,8 +27,10 @@ package loci.formats.in;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Hashtable;
-import java.util.Vector;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import loci.common.DataTools;
 import loci.common.Location;
@@ -48,15 +50,16 @@ import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Length;
+import ome.units.quantity.Temperature;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
+
 import org.xml.sax.Attributes;
 import org.xml.sax.helpers.DefaultHandler;
 
 /**
  * InCellReader is the file format reader for InCell 1000/2000 datasets.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/InCellReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/InCellReader.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  */
@@ -65,6 +68,7 @@ public class InCellReader extends FormatReader {
   // -- Constants --
 
   public static final String INCELL_MAGIC_STRING = "IN Cell Analyzer";
+  public static final String CYTELL_MAGIC_STRING = "Cytell";
 
   private static final String[] PIXELS_SUFFIXES =
     new String[] {"tif", "tiff", "im"};
@@ -77,8 +81,8 @@ public class InCellReader extends FormatReader {
 
   private Image[][][][] imageFiles;
   private MinimalTiffReader tiffReader;
-  private Vector<Integer> emWaves, exWaves;
-  private Vector<String> channelNames;
+  private List<Double> emWaves, exWaves;
+  private List<String> channelNames;
   private int totalImages;
   private int imageWidth, imageHeight;
   private String creationDate;
@@ -86,19 +90,19 @@ public class InCellReader extends FormatReader {
   private int fieldCount;
 
   private int wellRows, wellCols;
-  private Hashtable<Integer, int[]> wellCoordinates;
-  private Vector<Double> posX, posY;
+  private Map<Integer, int[]> wellCoordinates;
+  private List<Length> posX, posY;
 
   private boolean[][] exclude;
 
-  private Vector<Integer> channelsPerTimepoint;
+  private List<Integer> channelsPerTimepoint;
   private boolean oneTimepointPerSeries;
   private int totalChannels;
 
-  private Vector<String> metadataFiles;
+  private List<String> metadataFiles;
 
   private Binning bin;
-  private PositiveFloat x, y;
+  private Length x, y;
   private Double gain;
   private Double temperature;
   private Double refractive;
@@ -119,6 +123,7 @@ public class InCellReader extends FormatReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isThisType(String, boolean) */
+  @Override
   public boolean isThisType(String name, boolean open) {
     if (checkSuffix(name, "xdce") || checkSuffix(name, "xml")) {
       return super.isThisType(name, open);
@@ -127,30 +132,36 @@ public class InCellReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#isSingleFile(String) */
+  @Override
   public boolean isSingleFile(String id) throws FormatException, IOException {
     return false;
   }
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     final int blockLen = 2048;
     if (!FormatTools.validStream(stream, blockLen, false)) return false;
     String check = stream.readString(blockLen);
-    return check.indexOf(INCELL_MAGIC_STRING) >= 0;
+    return check.indexOf(INCELL_MAGIC_STRING) >= 0 ||
+      check.indexOf(CYTELL_MAGIC_STRING) >= 0;
   }
 
   /* @see loci.formats.IFormatReader#fileGroupOption(String) */
+  @Override
   public int fileGroupOption(String id) throws FormatException, IOException {
     return FormatTools.MUST_GROUP;
   }
 
   /* @see loci.formats.IFormatReader#get8BitLookupTable() */
+  @Override
   public byte[][] get8BitLookupTable() throws FormatException, IOException {
     FormatTools.assertId(currentId, true, 1);
     return tiffReader == null ? null : tiffReader.get8BitLookupTable();
   }
 
   /* @see loci.formats.IFormatReader#get16BitLookupTable() */
+  @Override
   public short[][] get16BitLookupTable() throws FormatException, IOException {
     FormatTools.assertId(currentId, true, 1);
     return tiffReader == null ? null : tiffReader.get16BitLookupTable();
@@ -159,6 +170,7 @@ public class InCellReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -201,9 +213,11 @@ public class InCellReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean) */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
-    Vector<String> files = new Vector<String>();
+    final List<String> files = new ArrayList<String>();
+    files.add(currentId);
     files.addAll(metadataFiles);
     if (!noPixels && imageFiles != null) {
       int well = getWellFromSeries(getSeries());
@@ -221,13 +235,11 @@ public class InCellReader extends FormatReader {
         }
       }
     }
-    if (!files.contains(currentId)) {
-      files.add(currentId);
-    }
     return files.toArray(new String[files.size()]);
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (tiffReader != null) tiffReader.close(fileOnly);
@@ -263,6 +275,7 @@ public class InCellReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getOptimalTileWidth() */
+  @Override
   public int getOptimalTileWidth() {
     FormatTools.assertId(currentId, true, 1);
     for (Image[][][] well : imageFiles) {
@@ -283,6 +296,7 @@ public class InCellReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getOptimalTileHeight() */
+  @Override
   public int getOptimalTileHeight() {
     FormatTools.assertId(currentId, true, 1);
     for (Image[][][] well : imageFiles) {
@@ -305,6 +319,7 @@ public class InCellReader extends FormatReader {
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     // make sure that we have the .xdce (or .xml) file
     if (checkSuffix(id, PIXELS_SUFFIXES) || checkSuffix(id, "xlog")) {
@@ -331,17 +346,17 @@ public class InCellReader extends FormatReader {
     super.initFile(id);
     in = new RandomAccessInputStream(id);
 
-    channelNames = new Vector<String>();
-    emWaves = new Vector<Integer>();
-    exWaves = new Vector<Integer>();
-    channelsPerTimepoint = new Vector<Integer>();
-    metadataFiles = new Vector<String>();
+    channelNames = new ArrayList<String>();
+    emWaves = new ArrayList<Double>();
+    exWaves = new ArrayList<Double>();
+    channelsPerTimepoint = new ArrayList<Integer>();
+    metadataFiles = new ArrayList<String>();
 
     // parse metadata from the .xdce or .xml file
 
-    wellCoordinates = new Hashtable<Integer, int[]>();
-    posX = new Vector<Double>();
-    posY = new Vector<Double>();
+    wellCoordinates = new HashMap<Integer, int[]>();
+    posX = new ArrayList<Length>();
+    posY = new ArrayList<Length>();
 
     byte[] b = new byte[(int) in.length()];
     in.read(b);
@@ -585,8 +600,12 @@ public class InCellReader extends FormatReader {
             Image img = imageFiles[well][field][timepoint][q];
             if (img == null) continue;
             int plane = time * getSizeZ() * c + q;
-            store.setPlaneDeltaT(img.deltaT, i, plane);
-            store.setPlaneExposureTime(img.exposure, i, plane);
+            if (img.deltaT != null) {
+              store.setPlaneDeltaT(new Time(img.deltaT, UNITS.S), i, plane);
+            }
+            if (img.exposure != null) {
+              store.setPlaneExposureTime(new Time(img.exposure, UNITS.S), i, plane);
+            }
 
             store.setPlanePositionX(posX.get(field), i, plane);
             store.setPlanePositionY(posY.get(field), i, plane);
@@ -600,16 +619,15 @@ public class InCellReader extends FormatReader {
             store.setChannelName(channelNames.get(q), i, q);
           }
           if (q < emWaves.size()) {
-            int wave = emWaves.get(q).intValue();
-            PositiveInteger emission = FormatTools.getEmissionWavelength(wave);
+            Double wave = emWaves.get(q);
+            Length emission = FormatTools.getEmissionWavelength(wave);
             if (emission != null) {
               store.setChannelEmissionWavelength(emission, i, q);
             }
           }
           if (q < exWaves.size()) {
-            int wave = exWaves.get(q).intValue();
-            PositiveInteger excitation =
-              FormatTools.getExcitationWavelength(wave);
+            Double wave = exWaves.get(q);
+            Length excitation = FormatTools.getExcitationWavelength(wave);
             if (excitation != null) {
               store.setChannelExcitationWavelength(excitation, i, q);
             }
@@ -626,15 +644,16 @@ public class InCellReader extends FormatReader {
           }
         }
         if (temperature != null) {
-          store.setImagingEnvironmentTemperature(temperature, i);
+          store.setImagingEnvironmentTemperature(
+                  new Temperature(temperature, UNITS.DEGREEC), i);
         }
       }
       setSeries(0);
 
       // populate Plate data
 
-      store.setPlateWellOriginX(0.5, 0);
-      store.setPlateWellOriginY(0.5, 0);
+      store.setPlateWellOriginX(new Length(0.5, UNITS.MICROM), 0);
+      store.setPlateWellOriginY(new Length(0.5, UNITS.MICROM), 0);
     }
   }
 
@@ -674,6 +693,7 @@ public class InCellReader extends FormatReader {
     private boolean doT = true;
     private boolean doZ = true;
 
+    @Override
     public void endElement(String uri, String localName, String qName) {
       if (qName.equals("PlateMap")) {
         int sizeT = getSizeT();
@@ -702,22 +722,23 @@ public class InCellReader extends FormatReader {
         }
       }
       else if (qName.equals("TimePoint")) {
-        channelsPerTimepoint.add(new Integer(nChannels));
+        channelsPerTimepoint.add(nChannels);
         nChannels = 0;
       }
       else if (qName.equals("Times")) {
         if (channelsPerTimepoint.size() == 0) {
-          channelsPerTimepoint.add(new Integer(getSizeC()));
+          channelsPerTimepoint.add(getSizeC());
         }
         for (int i=0; i<channelsPerTimepoint.size(); i++) {
           int c = channelsPerTimepoint.get(i).intValue();
           if (c == 0) {
-            channelsPerTimepoint.setElementAt(new Integer(getSizeC()), i);
+            channelsPerTimepoint.set(i, getSizeC());
           }
         }
       }
     }
 
+    @Override
     public void startElement(String uri, String localName, String qName,
       Attributes attributes)
     {
@@ -826,12 +847,14 @@ public class InCellReader extends FormatReader {
     private int currentRow = -1, currentCol = -1;
     private int currentField = 0;
     private int currentImage, currentPlane;
-    private Double timestamp, exposure, zPosition;
+    private Double timestamp, exposure;
+    private Length zPosition;
 
     public InCellHandler(MetadataStore store) {
       this.store = store;
     }
 
+    @Override
     public void characters(char[] ch, int start, int length) {
       if (currentQName.equals("UserComment")) {
         String value = new String(ch, start, length);
@@ -839,9 +862,10 @@ public class InCellReader extends FormatReader {
       }
     }
 
+    @Override
     public void endElement(String uri, String localName, String qName) {
       if (qName.equals("Image")) {
-        wellCoordinates.put(new Integer(currentField),
+        wellCoordinates.put(currentField,
           new int[] {currentRow, currentCol});
         openImage = false;
 
@@ -854,6 +878,7 @@ public class InCellReader extends FormatReader {
       }
     }
 
+    @Override
     public void startElement(String uri, String localName, String qName,
       Attributes attributes)
     {
@@ -881,7 +906,7 @@ public class InCellReader extends FormatReader {
         openImage = true;
         double time =
           Double.parseDouble(attributes.getValue("acquisition_time_ms"));
-        timestamp = new Double(time / 1000);
+        timestamp = time / 1000;
       }
       else if (qName.equals("Identifier")) {
         currentField = Integer.parseInt(attributes.getValue("field_index"));
@@ -897,7 +922,8 @@ public class InCellReader extends FormatReader {
         }
       }
       else if (qName.equals("FocusPosition")) {
-        zPosition = new Double(attributes.getValue("z"));
+        final Double z = Double.valueOf(attributes.getValue("z"));
+        zPosition = new Length(z, UNITS.REFERENCEFRAME);
       }
       else if (qName.equals("Creation")) {
         String date = attributes.getValue("date"); // yyyy-mm-dd
@@ -938,11 +964,11 @@ public class InCellReader extends FormatReader {
       }
       else if (qName.equals("ExcitationFilter")) {
         String wave = attributes.getValue("wavelength");
-        if (wave != null) exWaves.add(new Integer(wave));
+        if (wave != null) exWaves.add(new Double(wave));
       }
       else if (qName.equals("EmissionFilter")) {
         String wave = attributes.getValue("wavelength");
-        if (wave != null) emWaves.add(new Integer(wave));
+        if (wave != null) emWaves.add(new Double(wave));
         channelNames.add(attributes.getValue("name"));
       }
       else if (qName.equals("Camera")) {
@@ -987,14 +1013,14 @@ public class InCellReader extends FormatReader {
       }
       else if (qName.equals("Exposure") && openImage) {
         double exp = Double.parseDouble(attributes.getValue("time"));
-        exposure = new Double(exp / 1000);
+        exposure = exp / 1000;
       }
       else if (qName.equals("offset_point")) {
         String x = attributes.getValue("x");
         String y = attributes.getValue("y");
 
-        posX.add(new Double(x));
-        posY.add(new Double(y));
+        posX.add(new Length(Double.valueOf(x), UNITS.REFERENCEFRAME));
+        posY.add(new Length(Double.valueOf(y), UNITS.REFERENCEFRAME));
 
         addGlobalMetaList("X position for position", x);
         addGlobalMetaList("Y position for position", y);
@@ -1007,7 +1033,7 @@ public class InCellReader extends FormatReader {
     public String thumbnailFile;
     public boolean isTiff;
     public Double deltaT, exposure;
-    public Double zPosition;
+    public Length zPosition;
   }
 
 }
