@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2014 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2015 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -25,11 +25,15 @@
 
 package loci.formats.in;
 
+import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.HashMap;
 import java.util.Hashtable;
+import java.util.Iterator;
 import java.util.List;
-import java.util.Stack;
+import java.util.Map;
 import java.util.StringTokenizer;
 import java.util.Vector;
 
@@ -39,7 +43,6 @@ import loci.formats.CoreMetadata;
 import loci.formats.FormatTools;
 import loci.formats.MetadataTools;
 import loci.formats.meta.MetadataStore;
-
 import ome.xml.model.enums.Correction;
 import ome.xml.model.enums.DetectorType;
 import ome.xml.model.enums.EnumerationException;
@@ -58,18 +61,17 @@ import ome.xml.model.primitives.PercentFraction;
 import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
+import ome.units.quantity.ElectricPotential;
+import ome.units.quantity.Length;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.xml.sax.Attributes;
 
 /**
  * SAX handler for parsing XML in Leica LIF and Leica TCS files.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/LeicaHandler.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/LeicaHandler.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  */
@@ -83,13 +85,13 @@ public class LeicaHandler extends BaseHandler {
 
   // -- Fields --
 
-  private Stack<String> nameStack = new Stack<String>();
+  private Deque<String> nameStack = new ArrayDeque<String>();
 
   private String elementName, collection;
   private int count = 0, numChannels, extras = 1;
 
   private Vector<String> lutNames;
-  private Vector<Double> xPos, yPos, zPos;
+  private List<Length> xPos, yPos, zPos;
   private double physicalSizeX, physicalSizeY;
 
   private int numDatasets = -1;
@@ -99,7 +101,7 @@ public class LeicaHandler extends BaseHandler {
 
   private int nextChannel = 0;
   private Double zoom, pinhole;
-  private Vector<Integer> detectorIndices;
+  private List<Integer> detectorIndices;
   private String filterWheelName;
   private int nextFilter = 0;
   private int nextROI = 0;
@@ -114,12 +116,12 @@ public class LeicaHandler extends BaseHandler {
   private boolean canParse = true;
   private long firstStamp = 0;
 
-  private Hashtable<Integer, String> bytesPerAxis;
-  private Vector<MultiBand> multiBands = new Vector<MultiBand>();
-  private Vector<Detector> detectors = new Vector<Detector>();
-  private Vector<Laser> lasers = new Vector<Laser>();
-  private Hashtable<String, Channel> channels =
-    new Hashtable<String, Channel>();
+  private Map<Integer, String> bytesPerAxis;
+  private List<MultiBand> multiBands = new ArrayList<MultiBand>();
+  private List<Detector> detectors = new ArrayList<Detector>();
+  private List<Laser> lasers = new ArrayList<Laser>();
+  private Map<String, Channel> channels =
+    new HashMap<String, Channel>();
 
   private MetadataLevel level;
   private int laserCount = 0;
@@ -132,11 +134,11 @@ public class LeicaHandler extends BaseHandler {
     lutNames = new Vector<String>();
     this.store = store;
     core = new ArrayList<CoreMetadata>();
-    detectorIndices = new Vector<Integer>();
-    xPos = new Vector<Double>();
-    yPos = new Vector<Double>();
-    zPos = new Vector<Double>();
-    bytesPerAxis = new Hashtable<Integer, String>();
+    detectorIndices = new ArrayList<Integer>();
+    xPos = new ArrayList<Length>();
+    yPos = new ArrayList<Length>();
+    zPos = new ArrayList<Length>();
+    bytesPerAxis = new HashMap<Integer, String>();
     this.level = level;
   }
 
@@ -150,8 +152,9 @@ public class LeicaHandler extends BaseHandler {
 
   // -- DefaultHandler API methods --
 
+  @Override
   public void endElement(String uri, String localName, String qName) {
-    if (!nameStack.empty() && nameStack.peek().equals(qName)) nameStack.pop();
+    if (!nameStack.isEmpty() && nameStack.peek().equals(qName)) nameStack.pop();
 
     if (qName.equals("ImageDescription")) {
       CoreMetadata coreMeta = core.get(numDatasets);
@@ -206,7 +209,7 @@ public class LeicaHandler extends BaseHandler {
         int nChannels = coreMeta.rgb ? 0 : numChannels;
 
         for (int c=0; c<nChannels; c++) {
-          store.setChannelPinholeSize(pinhole, numDatasets, c);
+          store.setChannelPinholeSize(new Length(pinhole, UNITS.MICROM), numDatasets, c);
         }
 
         for (int i=0; i<xPos.size(); i++) {
@@ -260,7 +263,7 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorSettingsID(id, numDatasets, index);
         }
         for (int c=0; c<nChannels; c++) {
-          store.setChannelPinholeSize(pinhole, numDatasets, c);
+          store.setChannelPinholeSize(new Length(pinhole, UNITS.MICROM), numDatasets, c);
         }
       }
     }
@@ -275,6 +278,7 @@ public class LeicaHandler extends BaseHandler {
     }
   }
 
+  @Override
   public void startElement(String uri, String localName, String qName,
     Attributes attributes)
   {
@@ -296,7 +300,9 @@ public class LeicaHandler extends BaseHandler {
     if (!canParse) return;
 
     StringBuffer key = new StringBuffer();
-    for (String k : nameStack) {
+    final Iterator<String> nameStackIterator = nameStack.descendingIterator();
+    while (nameStackIterator.hasNext()) {
+      final String k = nameStackIterator.next();
       key.append(k);
       key.append("|");
     }
@@ -337,7 +343,8 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorModel(d.model, numDatasets, detectorChannel);
           store.setDetectorZoom(d.zoom, numDatasets, detectorChannel);
           store.setDetectorOffset(d.offset, numDatasets, detectorChannel);
-          store.setDetectorVoltage(d.voltage, numDatasets, detectorChannel);
+          store.setDetectorVoltage(new ElectricPotential(d.voltage, UNITS.V),
+                  numDatasets, detectorChannel);
 
           if (c < numChannels) {
             if (d.active) {
@@ -436,7 +443,7 @@ public class LeicaHandler extends BaseHandler {
               break;
           }
           physicalSizeX = physicalSize.doubleValue();
-          PositiveFloat sizeX = FormatTools.getPhysicalSizeX(physicalSize);
+          Length sizeX = FormatTools.getPhysicalSizeX(physicalSize);
           if (sizeX != null) {
             store.setPixelsPhysicalSizeX(sizeX, numDatasets);
           }
@@ -455,7 +462,7 @@ public class LeicaHandler extends BaseHandler {
           else {
             coreMeta.sizeY = len;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -467,7 +474,7 @@ public class LeicaHandler extends BaseHandler {
             coreMeta.sizeY = len;
             coreMeta.sizeZ = 1;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -484,7 +491,7 @@ public class LeicaHandler extends BaseHandler {
             coreMeta.sizeY = len;
             coreMeta.sizeT = 1;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -518,13 +525,16 @@ public class LeicaHandler extends BaseHandler {
       }
       else if (id.equals("dblStepSize")) {
         double zStep = Double.parseDouble(value) * 1000000;
-        PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(zStep);
+        Length sizeZ = FormatTools.getPhysicalSizeZ(zStep);
         if (sizeZ != null) {
           store.setPixelsPhysicalSizeZ(sizeZ, numDatasets);
         }
       }
       else if (id.equals("nDelayTime_s")) {
-        store.setPixelsTimeIncrement(new Double(value), numDatasets);
+        Double timeIncrement = new Double(value);
+        if (timeIncrement != null) {
+          store.setPixelsTimeIncrement(new Time(timeIncrement, UNITS.S), numDatasets);
+        }
       }
       else if (id.equals("CameraName")) {
         store.setDetectorModel(value, numDatasets, 0);
@@ -539,7 +549,10 @@ public class LeicaHandler extends BaseHandler {
         if (channel == null) channel = new Channel();
         if (id.endsWith("ExposureTime") && c < numChannels) {
           try {
-            store.setPlaneExposureTime(new Double(value), numDatasets, c);
+            Double exposureTime = new Double(value);
+            if (exposureTime != null) {
+              store.setPlaneExposureTime(new Time(exposureTime, UNITS.S), numDatasets, c);
+            }
           }
           catch (IndexOutOfBoundsException e) { }
         }
@@ -553,8 +566,8 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorType(DetectorType.CCD, numDatasets, 0);
         }
         else if (id.endsWith("WaveLength")) {
-          Integer exWave = new Integer(value);
-          PositiveInteger ex = FormatTools.getExcitationWavelength(exWave);
+          Double exWave = new Double(value);
+          Length ex = FormatTools.getExcitationWavelength(exWave);
           if (ex != null) {
             channel.exWave = ex;
           }
@@ -664,34 +677,37 @@ public class LeicaHandler extends BaseHandler {
       else if (attribute.equals("XPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posX = new Double(variant);
+        final Double posXn = Double.valueOf(variant);
+        final Length posXl = new Length(posXn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionX(posX, numDatasets, image);
+          store.setPlanePositionX(posXl, numDatasets, image);
         }
-        if (numChannels == 0) xPos.add(posX);
+        if (numChannels == 0) xPos.add(posXl);
       }
       else if (attribute.equals("YPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posY = new Double(variant);
+        final Double posYn = Double.valueOf(variant);
+        final Length posYl = new Length(posYn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionY(posY, numDatasets, image);
+          store.setPlanePositionY(posYl, numDatasets, image);
         }
-        if (numChannels == 0) yPos.add(posY);
+        if (numChannels == 0) yPos.add(posYl);
       }
       else if (attribute.equals("ZPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posZ = new Double(variant);
+        final Double posZn = Double.valueOf(variant);
+        final Length posZl = new Length(posZn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionZ(posZ, numDatasets, image);
+          store.setPlanePositionZ(posZl, numDatasets, image);
         }
-        if (numChannels == 0) zPos.add(posZ);
+        if (numChannels == 0) zPos.add(posZl);
       }
       else if (objectClass.equals("CSpectrophotometerUnit")) {
-        Integer v = null;
+        Double v = null;
         try {
-          v = new Integer((int) Double.parseDouble(variant));
+          v = Double.parseDouble(variant);
         }
         catch (NumberFormatException e) { }
         if (attributes.getValue("Description").endsWith("(left)")) {
@@ -700,13 +716,13 @@ public class LeicaHandler extends BaseHandler {
           store.setFilterID(id, numDatasets, nextFilter);
           store.setFilterModel(object, numDatasets, nextFilter);
 
-          PositiveInteger in = FormatTools.getCutIn(v);
+          Length in = FormatTools.getCutIn(v);
           if (in != null) {
             store.setTransmittanceRangeCutIn(in, numDatasets, nextFilter);
           }
         }
         else if (attributes.getValue("Description").endsWith("(right)")) {
-          PositiveInteger out = FormatTools.getCutOut(v);
+          Length out = FormatTools.getCutOut(v);
           if (out != null) {
             store.setTransmittanceRangeCutOut(out, numDatasets, nextFilter);
             nextFilter++;
@@ -725,7 +741,7 @@ public class LeicaHandler extends BaseHandler {
         // find the corresponding MultiBand and Detector
         MultiBand m = null;
         Detector detector = null;
-        Laser laser = lasers.size() == 0 ? null : lasers.get(lasers.size() - 1);
+        Laser laser = lasers.isEmpty() ? null : lasers.get(lasers.size() - 1);
         String c = attributes.getValue("Channel");
         int channel = c == null ? 0 : Integer.parseInt(c);
 
@@ -756,8 +772,8 @@ public class LeicaHandler extends BaseHandler {
             MetadataTools.createLSID("Filter", numDatasets, nextFilter);
           store.setFilterID(filter, numDatasets, nextFilter);
 
-          PositiveInteger in = FormatTools.getCutIn(m.cutIn);
-          PositiveInteger out = FormatTools.getCutOut(m.cutOut);
+          Length in = FormatTools.getCutIn(m.cutIn);
+          Length out = FormatTools.getCutOut(m.cutOut);
           if (in != null) {
             store.setTransmittanceRangeCutIn(in, numDatasets, nextFilter);
           }
@@ -790,7 +806,9 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorModel(detector.model, numDatasets, nextChannel);
           store.setDetectorZoom(detector.zoom, numDatasets, nextChannel);
           store.setDetectorOffset(detector.offset, numDatasets, nextChannel);
-          store.setDetectorVoltage(detector.voltage, numDatasets, nextChannel);
+          store.setDetectorVoltage(
+                  new ElectricPotential(detector.voltage, UNITS.V),
+                  numDatasets, nextChannel);
         }
 
         if (laser != null && laser.intensity < 100) {
@@ -800,7 +818,7 @@ public class LeicaHandler extends BaseHandler {
             new PercentFraction((float) laser.intensity / 100f),
             numDatasets, nextChannel);
 
-          PositiveInteger wavelength =
+          Length wavelength =
             FormatTools.getExcitationWavelength(laser.wavelength);
           if (wavelength != null) {
             store.setChannelExcitationWavelength(wavelength,
@@ -821,7 +839,7 @@ public class LeicaHandler extends BaseHandler {
       l.index += (2 - (qualifier / 10));
       if (l.index < 0) l.index = 0;
       l.id = MetadataTools.createLSID("LightSource", numDatasets, l.index);
-      l.wavelength = new Integer(attributes.getValue("LaserLine"));
+      l.wavelength = new Double(attributes.getValue("LaserLine"));
       while (l.index > laserCount) {
         String lsid =
           MetadataTools.createLSID("LightSource", numDatasets, laserCount);
@@ -831,7 +849,7 @@ public class LeicaHandler extends BaseHandler {
       store.setLaserID(l.id, numDatasets, l.index);
       laserCount++;
 
-      PositiveInteger wavelength = FormatTools.getWavelength(l.wavelength);
+      Length wavelength = FormatTools.getWavelength(l.wavelength);
       if (wavelength != null) {
         store.setLaserWavelength(wavelength, numDatasets, l.index);
       }
@@ -862,14 +880,14 @@ public class LeicaHandler extends BaseHandler {
           store.setImageAcquisitionDate(new Timestamp(date), numDatasets);
         }
         firstStamp = ms;
-        store.setPlaneDeltaT(0.0, numDatasets, count);
+        store.setPlaneDeltaT(new Time(0.0, UNITS.S), numDatasets, count);
       }
       else if (level != MetadataLevel.MINIMUM) {
         CoreMetadata coreMeta = core.get(numDatasets);
         int nImages = coreMeta.sizeZ * coreMeta.sizeT * coreMeta.sizeC;
         if (count < nImages) {
           ms -= firstStamp;
-          store.setPlaneDeltaT(ms / 1000.0, numDatasets, count);
+          store.setPlaneDeltaT(new Time(ms / 1000.0, UNITS.S), numDatasets, count);
         }
       }
 
@@ -880,7 +898,9 @@ public class LeicaHandler extends BaseHandler {
       int nImages = coreMeta.sizeZ * coreMeta.sizeT * coreMeta.sizeC;
       if (count < nImages) {
         Double time = new Double(attributes.getValue("Time"));
-        store.setPlaneDeltaT(time, numDatasets, count++);
+        if (time != null) {
+          store.setPlaneDeltaT(new Time(time, UNITS.S), numDatasets, count++);
+        }
       }
     }
     else if (qName.equals("Annotation") && level != MetadataLevel.MINIMUM) {
@@ -920,9 +940,9 @@ public class LeicaHandler extends BaseHandler {
       MultiBand m = new MultiBand();
       m.dyeName = attributes.getValue("DyeName");
       m.channel = Integer.parseInt(attributes.getValue("Channel"));
-      m.cutIn = (int)
+      m.cutIn = (double)
         Math.round(Double.parseDouble(attributes.getValue("LeftWorld")));
-      m.cutOut = (int)
+      m.cutOut = (double)
         Math.round(Double.parseDouble(attributes.getValue("RightWorld")));
 
       multiBands.add(m);
@@ -1020,12 +1040,13 @@ public class LeicaHandler extends BaseHandler {
       store.setLabelText(text, roi, 0);
       if (fontSize != null) {
         double size = Double.parseDouble(fontSize);
-        NonNegativeInteger fontSize = FormatTools.getFontSize((int) size);
+        Length fontSize = FormatTools.getFontSize((int) size);
         if (fontSize != null) {
           store.setLabelFontSize(fontSize, roi, 0);
         }
       }
-      store.setLabelStrokeWidth(new Double(linewidth), roi, 0);
+      Length l = new Length(new Double(linewidth), UNITS.PIXEL);
+      store.setLabelStrokeWidth(l, roi, 0);
 
       if (!normalized) normalize();
 
@@ -1150,8 +1171,8 @@ public class LeicaHandler extends BaseHandler {
 
   class MultiBand {
     public int channel;
-    public int cutIn;
-    public int cutOut;
+    public double cutIn;
+    public double cutOut;
     public String dyeName;
   }
 
@@ -1166,7 +1187,7 @@ public class LeicaHandler extends BaseHandler {
   }
 
   class Laser {
-    public Integer wavelength;
+    public Double wavelength;
     public double intensity;
     public String id;
     public int index;
@@ -1175,7 +1196,7 @@ public class LeicaHandler extends BaseHandler {
   class Channel {
     public String detector;
     public Double gain;
-    public PositiveInteger exWave;
+    public Length exWave;
     public String name;
   }
 
