@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2014 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2015 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -38,19 +38,16 @@ import loci.formats.FormatTools;
 import loci.formats.MetadataTools;
 import loci.formats.meta.MetadataStore;
 
+import ome.units.UNITS;
+import ome.units.quantity.Length;
 import ome.xml.model.primitives.NonNegativeInteger;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.xml.sax.Attributes;
 
 /**
  * DefaultHandler implementation for handling XML produced by Nikon Elements.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/ND2Handler.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/ND2Handler.java;hb=HEAD">Gitweb</a></dd></dl>
  */
 public class ND2Handler extends BaseHandler {
 
@@ -88,14 +85,14 @@ public class ND2Handler extends BaseHandler {
   private ArrayList<Double> gain = new ArrayList<Double>();
   private ArrayList<Double> temperature = new ArrayList<Double>();
   private ArrayList<Double> exposureTime = new ArrayList<Double>();
-  private ArrayList<Integer> exWave = new ArrayList<Integer>();
-  private ArrayList<Integer> emWave = new ArrayList<Integer>();
+  private ArrayList<Double> exWave = new ArrayList<Double>();
+  private ArrayList<Double> emWave = new ArrayList<Double>();
   private ArrayList<Integer> power = new ArrayList<Integer>();
   private ArrayList<Hashtable<String, String>> rois =
     new ArrayList<Hashtable<String, String>>();
-  private ArrayList<Double> posX = new ArrayList<Double>();
-  private ArrayList<Double> posY = new ArrayList<Double>();
-  private ArrayList<Double> posZ = new ArrayList<Double>();
+  private ArrayList<Length> posX = new ArrayList<Length>();
+  private ArrayList<Length> posY = new ArrayList<Length>();
+  private ArrayList<Length> posZ = new ArrayList<Length>();
   private ArrayList<String> posNames = new ArrayList<String>();
 
   private String cameraModel;
@@ -114,6 +111,7 @@ public class ND2Handler extends BaseHandler {
   private ArrayList<Boolean> validLoopState = new ArrayList<Boolean>();
 
   private boolean canAdjustDimensions = true;
+  private boolean firstTimeLoop = true;
 
   // -- Constructor --
 
@@ -153,10 +151,11 @@ public class ND2Handler extends BaseHandler {
 
         int fontSize = Integer.parseInt(roi.get("fHeight"));
         if (fontSize >= 0) {
-          store.setLabelFontSize(new NonNegativeInteger(fontSize), r, 0);
+          store.setLabelFontSize(new Length(fontSize, UNITS.PT), r, 0);
         }
         store.setLabelText(roi.get("eval-text"), r, 0);
-        store.setLabelStrokeWidth(new Double(roi.get("line-width")), r, 0);
+        Length l = new Length(new Double(roi.get("line-width")), UNITS.PIXEL);
+        store.setLabelStrokeWidth(l, r, 0);
 
         String rectangle = roi.get("rectangle");
         String[] p = rectangle.split(",");
@@ -294,11 +293,11 @@ public class ND2Handler extends BaseHandler {
     return exposureTime;
   }
 
-  public ArrayList<Integer> getExcitationWavelengths() {
+  public ArrayList<Double> getExcitationWavelengths() {
     return exWave;
   }
 
-  public ArrayList<Integer> getEmissionWavelengths() {
+  public ArrayList<Double> getEmissionWavelengths() {
     return emWave;
   }
 
@@ -310,15 +309,15 @@ public class ND2Handler extends BaseHandler {
     return rois;
   }
 
-  public ArrayList<Double> getXPositions() {
+  public ArrayList<Length> getXPositions() {
     return posX;
   }
 
-  public ArrayList<Double> getYPositions() {
+  public ArrayList<Length> getYPositions() {
     return posY;
   }
 
-  public ArrayList<Double> getZPositions() {
+  public ArrayList<Length> getZPositions() {
     return posZ;
   }
 
@@ -351,6 +350,7 @@ public class ND2Handler extends BaseHandler {
     }
   }
 
+  @Override
   public void startElement(String uri, String localName, String qName,
     Attributes attributes)
   {
@@ -511,15 +511,18 @@ public class ND2Handler extends BaseHandler {
         }
       }
       else if ("dPosX".equals(prevElement) && qName.startsWith("item_")) {
-        posX.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posX.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("X position for position #" + posX.size(), value);
       }
       else if ("dPosY".equals(prevElement) && qName.startsWith("item_")) {
-        posY.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posY.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("Y position for position #" + posY.size(), value);
       }
       else if ("dPosZ".equals(prevElement) && qName.startsWith("item_")) {
-        posZ.add(new Double(DataTools.sanitizeDouble(value)));
+        final Double number = Double.valueOf(DataTools.sanitizeDouble(value));
+        posZ.add(new Length(number, UNITS.REFERENCEFRAME));
         metadata.put("Z position for position #" + posZ.size(), value);
       }
       else if (qName.startsWith("item_")) {
@@ -618,6 +621,7 @@ public class ND2Handler extends BaseHandler {
     prevRuntype = attributes.getValue("runtype");
   }
 
+  @Override
   public void endDocument() {
     for (String name : colors.keySet()) {
       String chName = dyes.get(name);
@@ -893,11 +897,11 @@ public class ND2Handler extends BaseHandler {
       }
       else if (key.equalsIgnoreCase("Emission wavelength")) {
         String[] v = value.split(" ");
-        emWave.add(new Integer(v[0]));
+        emWave.add(new Double(v[0]));
       }
       else if (key.equalsIgnoreCase("Excitation wavelength")) {
         String[] v = value.split(" ");
-        exWave.add(new Integer(v[0]));
+        exWave.add(new Double(v[0]));
       }
       else if (key.equals("Power")) {
         value = DataTools.sanitizeDouble(value);
@@ -923,8 +927,9 @@ public class ND2Handler extends BaseHandler {
       }
       else if (key.equals("Time Loop")) {
         int v = Integer.parseInt(value);
-        if (v <= nImages) {
+        if (v <= nImages && firstTimeLoop) {
           core.get(0).sizeT = v;
+          firstTimeLoop = false;
         }
       }
     }
