@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2014 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2015 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -42,14 +42,13 @@ import loci.formats.codec.CodecOptions;
 import loci.formats.codec.LZOCodec;
 import loci.formats.meta.MetadataStore;
 
+import ome.units.UNITS;
+import ome.units.quantity.Length;
 import ome.xml.model.primitives.PositiveFloat;
+import ome.units.quantity.Length;
 
 /**
  * OpenlabReader is the file format reader for Openlab LIFF files.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/OpenlabReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/OpenlabReader.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  * @author Eric Kjellman egkjellman at wisc.edu
@@ -125,12 +124,14 @@ public class OpenlabReader extends FormatReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#getOptimalTileHeight() */
+  @Override
   public int getOptimalTileHeight() {
     FormatTools.assertId(currentId, true, 1);
     return getSizeY();
   }
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     final int blockLen = 8;
     if (!FormatTools.validStream(stream, blockLen, false)) return false;
@@ -138,6 +139,7 @@ public class OpenlabReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#get8BitLookupTable() */
+  @Override
   public byte[][] get8BitLookupTable() {
     if (luts != null) {
       if (getSeries() < planeOffsets.length &&
@@ -155,6 +157,7 @@ public class OpenlabReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -309,6 +312,7 @@ public class OpenlabReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (pict != null) pict.close(fileOnly);
@@ -332,6 +336,7 @@ public class OpenlabReader extends FormatReader {
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     super.initFile(id);
     in = new RandomAccessInputStream(id);
@@ -394,7 +399,7 @@ public class OpenlabReader extends FormatReader {
         planes[imagesFound].volumeType = in.readShort();
         in.skipBytes(16);
         long pointer = in.getFilePointer();
-        planes[imagesFound].planeName = in.readCString().trim();
+        planes[imagesFound].planeName = readCString().trim();
         in.skipBytes((int) (256 - in.getFilePointer() + pointer));
 
         planes[imagesFound].planeOffset = in.getFilePointer();
@@ -415,7 +420,7 @@ public class OpenlabReader extends FormatReader {
           planes[imagesFound].height = in.readInt();
         }
 
-        for (int i=0; i<representativePlanes.size(); i++) {
+        for (int i=representativePlanes.size()-1; i>=0; i--) {
           PlaneInfo p = representativePlanes.get(i);
           if (planes[imagesFound].width == p.width &&
             planes[imagesFound].height == p.height &&
@@ -464,12 +469,12 @@ public class OpenlabReader extends FormatReader {
           ycal = in.readFloat() * scaling;
         }
         else if (tag == USER) {
-          String className = in.readCString();
+          String className = readCString();
 
           if (className.equals("CVariableList")) {
-            char achar = in.readChar();
+            byte check = in.readByte();
 
-            if (achar == 1) {
+            if (check == 1) {
               int numVars = in.readShort();
               for (int i=0; i<numVars; i++) {
                 readVariable();
@@ -597,8 +602,8 @@ public class OpenlabReader extends FormatReader {
     if (level != MetadataLevel.MINIMUM) {
       // populate MetadataStore
 
-      PositiveFloat sizeX = FormatTools.getPhysicalSizeX(new Double(xcal));
-      PositiveFloat sizeY = FormatTools.getPhysicalSizeY(new Double(ycal));
+      Length sizeX = FormatTools.getPhysicalSizeX(new Double(xcal));
+      Length sizeY = FormatTools.getPhysicalSizeY(new Double(ycal));
 
       if (sizeX != null) {
         store.setPixelsPhysicalSizeX(sizeX, 0);
@@ -639,9 +644,22 @@ public class OpenlabReader extends FormatReader {
         }
       }
 
-      Double stageX = xPos == null ? null : new Double(xPos);
-      Double stageY = yPos == null ? null : new Double(yPos);
-      Double stageZ = zPos == null ? null : new Double(zPos);
+      final Length stageX, stageY, stageZ;
+      if (xPos == null) {
+          stageX = null;
+      } else {
+          stageX = new Length(Double.valueOf(xPos), UNITS.REFERENCEFRAME);
+      }
+      if (yPos == null) {
+          stageY = null;
+      } else {
+          stageY = new Length(Double.valueOf(yPos), UNITS.REFERENCEFRAME);
+      }
+      if (zPos == null) {
+          stageZ = null;
+      } else {
+          stageZ = new Length(Double.valueOf(zPos), UNITS.REFERENCEFRAME);
+      }
 
       if (stageX != null || stageY != null || stageZ != null) {
         for (int series=0; series<getSeriesCount(); series++) {
@@ -677,7 +695,7 @@ public class OpenlabReader extends FormatReader {
   }
 
   private void readVariable() throws FormatException, IOException {
-    String className = in.readCString();
+    String className = readCString();
 
     String name = "", value = "";
 
@@ -900,6 +918,12 @@ public class OpenlabReader extends FormatReader {
         in.read(buf, 7, buf.length - 7);
       }
     }
+  }
+
+  private String readCString() throws IOException {
+    // long strings are rarely encountered, so using a smaller block size
+    // will be faster than calling in.readCString()
+    return in.findString(true, 64, "\0");
   }
 
   // -- Helper classes --
