@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2014 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2015 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -39,13 +39,11 @@ import loci.formats.MetadataTools;
 import loci.formats.meta.MetadataStore;
 import loci.formats.tiff.IFD;
 import loci.formats.tiff.TiffParser;
+import ome.units.UNITS;
+import ome.units.quantity.Length;
 import ome.xml.model.primitives.PositiveFloat;
 
 /**
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/SlidebookTiffReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/SlidebookTiffReader.java;hb=HEAD">Gitweb</a></dd></dl>
  */
 public class SlidebookTiffReader extends BaseTiffReader {
 
@@ -78,6 +76,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     TiffParser tp = new TiffParser(stream);
     IFD ifd = tp.getFirstIFD();
@@ -92,6 +91,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -110,12 +110,14 @@ public class SlidebookTiffReader extends BaseTiffReader {
   }
 
   /* @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean) */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
     return noPixels ? null : files;
   }
 
   /* @see loci.formats.IFormatReader#get8BitLookupTable() */
+  @Override
   public byte[][] get8BitLookupTable() throws FormatException, IOException {
     FormatTools.assertId(currentId, true, 1);
     if (readers == null || lastFile < 0 || lastFile >= readers.length ||
@@ -127,6 +129,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   }
 
   /* @see loci.formats.IFormatReader#get16BitLookupTable() */
+  @Override
   public short[][] get16BitLookupTable() throws FormatException, IOException {
     FormatTools.assertId(currentId, true, 1);
     if (readers == null || lastFile < 0 || lastFile >= readers.length ||
@@ -140,6 +143,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -156,6 +160,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   // -- Internal BaseTiffReader API methods --
 
   /* @see BaseTiffReader#initStandardMetadata() */
+  @Override
   protected void initStandardMetadata() throws FormatException, IOException {
     super.initStandardMetadata();
 
@@ -207,6 +212,7 @@ public class SlidebookTiffReader extends BaseTiffReader {
   }
 
   /* @see BaseTiffReader#initMetadataStore() */
+  @Override
   protected void initMetadataStore() throws FormatException {
     super.initMetadataStore();
     MetadataStore store = makeFilterMetadata();
@@ -237,8 +243,8 @@ public class SlidebookTiffReader extends BaseTiffReader {
       if (physicalSize != null) {
         Double size = new Double(physicalSize);
         if (size > 0) {
-          store.setPixelsPhysicalSizeX(new PositiveFloat(size), 0);
-          store.setPixelsPhysicalSizeY(new PositiveFloat(size), 0);
+          store.setPixelsPhysicalSizeX(FormatTools.getPhysicalSizeX(size), 0);
+          store.setPixelsPhysicalSizeY(FormatTools.getPhysicalSizeY(size), 0);
         }
       }
 
@@ -251,14 +257,18 @@ public class SlidebookTiffReader extends BaseTiffReader {
         store.setObjectiveNominalMagnification(new Double(mag), 0, 0);
       }
 
-      Double x = new Double(ifd.getIFDTextValue(X_POS_TAG));
-      Double y = new Double(ifd.getIFDTextValue(Y_POS_TAG));
-      Double z = new Double(ifd.getIFDTextValue(Z_POS_TAG));
+      final Double xn = Double.valueOf(ifd.getIFDTextValue(X_POS_TAG));
+      final Double yn = Double.valueOf(ifd.getIFDTextValue(Y_POS_TAG));
+      final Double zn = Double.valueOf(ifd.getIFDTextValue(Z_POS_TAG));
+
+      final Length xl = new Length(xn, UNITS.REFERENCEFRAME);
+      final Length yl = new Length(yn, UNITS.REFERENCEFRAME);
+      final Length zl = new Length(zn, UNITS.REFERENCEFRAME);
 
       for (int i=0; i<getImageCount(); i++) {
-        store.setPlanePositionX(x, 0, i);
-        store.setPlanePositionY(y, 0, i);
-        store.setPlanePositionZ(z, 0, i);
+        store.setPlanePositionX(xl, 0, i);
+        store.setPlanePositionY(yl, 0, i);
+        store.setPlanePositionZ(zl, 0, i);
       }
     }
   }
